feat: novas funcionalidades
